--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  curved_navigation_bar: ^0.3.2
   vibration: ^1.2.4
   flutter_local_notifications: ^1.4.3
   path_provider: ^1.6.9
