--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  shared_preferences: ^0.5.7+3
   intl: ^0.16.1
   curved_navigation_bar: ^0.3.2
   vibration: ^1.2.4
