--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,10 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  cloud_firestore: ^0.13.6
+  firebase_core: ^0.4.5
+  firebase_auth: ^0.16.1
+  firebase_database: ^3.1.6
   flutter_mobx: ^1.1.0
   mobx: ^1.2.1
   shared_preferences: ^0.5.7+3
